KSE latest advanced

--- a/.env
+++ b/.env
@@ -12,6 +12,6 @@ PUBLICVAPIDKEY=your public vapid key
 
 PRIVATEVAPIDKEY=your private vapid key
 
-SUPERADMINPASS=1234
+SUPERADMINPASS=your admin pass
 
 GOOGLE_APPLICATION_CREDENTIALS="your google credentials"
